# comparagas

./: .dockerignore  .gitignore  Dockerfile  EXAMPLES.md  Home.py  README.md  pyproject.toml
utils/: llm.py  model_fetcher.py  provider.py  ragas_text_comparison.py  report_generator.py
