[tool.poetry]
name = "comparagas"
version = "0.1.0"
description = "Ferramenta de comparação de textos usando RAGAS com interface Streamlit"
authors = ["Braz Souza <mail@braz.one>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
streamlit = ">=1.48.1,<2.0.0"
ragas = ">=0.3.1,<0.4.0"
langchain-openai = ">=0.3.30,<0.4.0"
datasets = ">=2.14.0,<3.0.0"
openai = ">=1.0.0,<2.0.0"
plotly = ">=5.0.0,<6.0.0"
pandas = ">=1.5.0,<3.0.0"
reportlab = ">=4.0.0,<5.0.0"
python-docx = ">=1.0.0,<2.0.0"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
langchain = "^0.3.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "streamlit run Home.py"
